# caltechdata_api

./: .gitignore  CITATION.cff  LICENSE  README.md  Uploading_dataset_to_CaltechDATA.ipynb  __init__.py  accept.py  add_community.py  add_doi_minting_date.py  add_file_links.py  add_files_authors.py  add_remote_files.py  caltechdata_api.py  caltechdata_write.py  cli.py  codemeta.json  completed_dois.json  customize_schema.py  edit.py  edit_all_geo.py  edit_all_github.py  edit_all_tccon.py  edit_files.py  edit_osn.py  edit_pilot_phase1.py  edit_tccon.py  example.json  example.py  example43.json  example_custom.json  example_download_and_upload.ipynb  fix_names.py  get_geo.py  inspect_dois.py  load_edit_revised.ipynb  md_to_json.py  new_ids.json  process_tomograms.py  rdm.json  requirements.txt  (+16 more)
.github/: dependabot.yml
caltechdata_api/: 1639.json  1639.xml  234.json  461.json  __init__.py  bialystok.json  caltechdata_edit.py  caltechdata_write.py  cli-documentation-for-users.md  cli-documentation.md  cli.py  customize_schema.py  decustomize_schema.py  download_file.py  download_from_record.py  get_files.py  get_metadata.py  md_to_json.py  utils.py  vocabularies.yaml
caltechdata_write/: __init__.py  caltechdata_edit.py  caltechdata_write.py  customize_schema.py
outdated/: README.md  add_doi_minting_date.py  caltechdata_multipart.py  edit_all.py  edit_all_tccon.py  edit_files.py  edit_pilot_phase1.py  edit_tccon.py  get_geo.py  test.py  test_community.py  test_file.py  unembargo.py  update_thesis_file.py  write.py
templates/: README.md
tests/: bot.py  bot_yaml.py  (+8 more)
(+89 files in other folders)
