[build-system]
requires = ["setuptools>=64.0","wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = caltechdata_api
version = 1.9.1
author = Thomas E Morrell, Rohan Bhattarai, Won Elizabeth, Alexander A Abakah
author_email = tmorrell@caltech.edu, aabakah@caltech.edu
description = Python wrapper for CaltechDATA API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caltechlibrary/caltechdata_api
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6.0
install_requires =
    requests
    datacite>1.1.0
    tqdm>=4.62.3
    pyyaml
    s3fs
    cryptography
    s3cmd
include_package_data = True

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = 
    caltechdata_api=caltechdata_api.cli:main

[tool:pytest]
addopts = --verbose
